# olilands-server

./: .gitignore  CLIENT_PROTOCOL.md  CMakeLists.txt  README.md  UBUNTU.md
.github/workflows/: build.yml
data/: config.lua  database.sql  map.tmj  map.tmx
src/: main.cpp
src/config/: configmanager.cpp  configmanager.h  logmanager.cpp  logmanager.h
src/database/: connectionguard.h  connectionpool.cpp  connectionpool.h  databasemanager.cpp  databasemanager.h  playermanager.cpp  playermanager.h  useraccountmanager.cpp  useraccountmanager.h  usermanager.cpp  usermanager.h
src/models/: charactercreationinfo.h  characterinfo.h  otherplayerinfo.h
src/monitoring/: memorymonitor.cpp  memorymonitor.h
src/protocol/: attackprotocol.cpp  attackprotocol.h  characterprotocol.cpp  characterprotocol.h  loginprotocol.cpp  loginprotocol.h  movementprotocol.cpp  movementprotocol.h  protocol.cpp  protocol.h  protocolenum.h
src/server/: server.cpp  server.h
src/session/: session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
src/session/handlers/: sessionattack.cpp  sessionattack.h  sessionauth.cpp  sessionauth.h  sessionmovement.cpp  sessionmovement.h
src/world/: maploader.cpp  maploader.h  mapmanager.cpp  mapmanager.h  tile.cpp  tile.h  tilelayer.cpp  tilelayer.h  world.cpp  world.h
